--- a/Styles.css
+++ b/Styles.css
@@ -27,6 +27,29 @@ body {
     display: flex;
 }
 
+.guia {
+    display: flex;
+    align-items: center;
+    margin-bottom: 20px;
+    max-width: 100%;
+    flex-wrap: wrap;
+}
+
+#personaje {
+    width: 100px;
+    height: auto;
+    margin-right: 20px;
+}
+
+#texto-guia {
+    font-size: 1.2em;
+    border: 2px solid #000;
+    padding: 10px;
+    background-color: #282a36; /* Fondo gris oscuro */
+    color: #50fa7b; /* Texto verde */
+    max-width: 400px;
+}
+
 .btn {
     background-color: #6272a4; /* Azul relajante */
     color: #fff;
@@ -70,16 +93,17 @@ body {
 }
 
 .pregunta-container {
-    position: absolute;
-    top: 50%; /* Ajusta la posición vertical */
-    left: 50%;
-    transform: translate(-50%, -50%); /* Centra el contenedor */
-    width: 80%; /* Ajusta el ancho para pantallas móviles */
-    max-width: 600px;
-    background-color: rgba(0, 0, 0, 0.8);
+    display: flex;
+    flex-direction: column;
+    align-items: center; /* Centra el contenido horizontalmente */
+    justify-content: center; /* Centra el contenido verticalmente */
+    width: 100%;
+    margin-top: 20px;
     padding: 20px;
+    background-color: rgba(0, 0, 0, 0.8); /* Fondo semi-transparente */
     border-radius: 10px;
-    text-align: center;
+    box-sizing: border-box;
+    text-align: center; /* Centra el texto */
 }
 
 .pregunta {
